Написаны тесты и проведен рефакторинг кода